DespertadorCPU-Microarquitectura/DespertadorCPU-Microarquitectura/despertador-software/.metadata/.plugins/org.eclipse.cdt.ui/DespertadorFinal.build.log
02:04:02 **** Build of configuration Nios II for project DespertadorFinal ****
make all 
Info: Building ../DespertadorFinal_bsp/
C:/intelFPGA/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../DespertadorFinal_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc -xc -MP -MMD -c -I../DespertadorFinal_bsp//HAL/inc -I../DespertadorFinal_bsp/ -I../DespertadorFinal_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
hello_world_small.c:12:34: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * hora1= (short *) 0x30b0;
                                  ^
hello_world_small.c:13:34: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * hora2= (short *) 0x30a0;
                                  ^
hello_world_small.c:14:33: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * min1= (short *) 0x3090;
                                 ^
hello_world_small.c:15:33: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * min2= (short *) 0x3080;
                                 ^
hello_world_small.c:16:36: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * btnhora= (short *) 0x3070;
                                    ^
hello_world_small.c:17:35: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * btnmin= (short *) 0x3060;
                                   ^
hello_world_small.c:18:38: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * btnapagar= (short *) 0x3050;
                                      ^
hello_world_small.c:19:35: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * swmodo= (short *) 0x3040;
                                   ^
hello_world_small.c:20:35: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * buzzer= (short *) 0x3030;
                                   ^
hello_world_small.c:21:37: warning: pointer targets in initialization differ in signedness [-Wpointer-sign]
 volatile unsigned short * swinicio= (short *) 0x3020;
                                     ^
hello_world_small.c: In function 'main':
hello_world_small.c:33:11: warning: implicit declaration of function 'cambiar_numero' [-Wimplicit-function-declaration]
  *hora1 = cambiar_numero(0);
           ^
hello_world_small.c:44:4: warning: implicit declaration of function 'sumar_dato' [-Wimplicit-function-declaration]
    sumar_dato(&hora, hora1, hora2);
    ^
hello_world_small.c:52:4: warning: implicit declaration of function 'inicio_reloj' [-Wimplicit-function-declaration]
    inicio_reloj();
    ^
hello_world_small.c: At top level:
hello_world_small.c:63:6: warning: conflicting types for 'inicio_reloj'
 void inicio_reloj(){
      ^
hello_world_small.c:52:4: note: previous implicit declaration of 'inicio_reloj' was here
    inicio_reloj();
    ^
hello_world_small.c: In function 'inicio_reloj':
hello_world_small.c:78:3: warning: implicit declaration of function 'actualizar_datos' [-Wimplicit-function-declaration]
   actualizar_datos();
   ^
hello_world_small.c:79:3: warning: implicit declaration of function 'wait_for_one_second' [-Wimplicit-function-declaration]
   wait_for_one_second();
   ^
hello_world_small.c:81:13: warning: character constant too long for its type
  alt_putstr('TERMINO LA OSTIA');
             ^
hello_world_small.c:81:13: warning: passing argument 1 of 'alt_putstr' makes pointer from integer without a cast [-Wint-conversion]
In file included from hello_world_small.c:5:0:
../DespertadorFinal_bsp//HAL/inc/sys/alt_stdio.h:55:5: note: expected 'const char *' but argument is of type 'int'
 int alt_putstr(const char* str);
     ^
hello_world_small.c: At top level:
hello_world_small.c:85:6: warning: conflicting types for 'wait_for_one_second'
 void wait_for_one_second(void) {
      ^
hello_world_small.c:79:3: note: previous implicit declaration of 'wait_for_one_second' was here
   wait_for_one_second();
   ^
hello_world_small.c: In function 'wait_for_one_second':
hello_world_small.c:88:5: error: unknown type name 'uint32_t'
     uint32_t clock_frequency = 50000000;
     ^
hello_world_small.c:89:5: error: unknown type name 'uint32_t'
     uint32_t count = clock_frequency;  // Contar hasta 1 segundo
     ^
In file included from ../DespertadorFinal_bsp//drivers/inc/altera_avalon_timer_regs.h:34:0,
                 from hello_world_small.c:4:
hello_world_small.c:92:38: error: 'TIMER_BASE' undeclared (first use in this function)
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, 0x00); // Desactiva el temporizador
                                      ^
../DespertadorFinal_bsp//HAL/inc/io.h:70:23: note: in definition of macro '__IO_CALC_ADDRESS_NATIVE'
   ((void *)(((alt_u8*)BASE) + ((REGNUM) * (SYSTEM_BUS_WIDTH/8))))
                       ^
../DespertadorFinal_bsp//drivers/inc/altera_avalon_timer_regs.h:56:3: note: in expansion of macro 'IOWR'
   IOWR(base, ALTERA_AVALON_TIMER_CONTROL_REG, data)
   ^
hello_world_small.c:92:5: note: in expansion of macro 'IOWR_ALTERA_AVALON_TIMER_CONTROL'
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, 0x00); // Desactiva el temporizador
     ^
hello_world_small.c:92:38: note: each undeclared identifier is reported only once for each function it appears in
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, 0x00); // Desactiva el temporizador
                                      ^
../DespertadorFinal_bsp//HAL/inc/io.h:70:23: note: in definition of macro '__IO_CALC_ADDRESS_NATIVE'
   ((void *)(((alt_u8*)BASE) + ((REGNUM) * (SYSTEM_BUS_WIDTH/8))))
                       ^
../DespertadorFinal_bsp//drivers/inc/altera_avalon_timer_regs.h:56:3: note: in expansion of macro 'IOWR'
   IOWR(base, ALTERA_AVALON_TIMER_CONTROL_REG, data)
   ^
hello_world_small.c:92:5: note: in expansion of macro 'IOWR_ALTERA_AVALON_TIMER_CONTROL'
     IOWR_ALTERA_AVALON_TIMER_CONTROL(TIMER_BASE, 0x00); // Desactiva el temporizador
     ^
hello_world_small.c:93:5: warning: implicit declaration of function 'IOWR_ALTERA_AVALON_TIMER_PERIOD' [-Wimplicit-function-declaration]
     IOWR_ALTERA_AVALON_TIMER_PERIOD(TIMER_BASE, count); // Carga el valor del contador
     ^
hello_world_small.c: At top level:
hello_world_small.c:105:6: warning: conflicting types for 'actualizar_datos'
 void actualizar_datos(){
      ^
hello_world_small.c:78:3: note: previous implicit declaration of 'actualizar_datos' was here
   actualizar_datos();
   ^
hello_world_small.c:117:6: warning: conflicting types for 'sumar_dato'
 void sumar_dato(unsigned short *valor, volatile unsigned short *dato1, volatile unsigned short *dato2){
      ^
hello_world_small.c:44:4: note: previous implicit declaration of 'sumar_dato' was here
    sumar_dato(&hora, hora1, hora2);
    ^
hello_world_small.c: In function 'timer_isr':
hello_world_small.c:191:6: warning: unused variable 'seg' [-Wunused-variable]
  int seg = 0;
      ^
make: *** [obj/default/hello_world_small.o] Error 1

02:04:04 Build Finished (took 2s.44ms)

